# designer-gpt

./: .gitignore  README.md  chainlit.md  notes.md  pyproject.toml  test.py
.chainlit/: config.toml
designer_gpt/: app.py  app2.py  config.toml  prompts.py  server.py  shared.py
designer_gpt/agents/: trackable_agent.py
designer_gpt/chains/: generate_webpage.py
designer_gpt/models/: html_code.py
tests/: user_prompts.py
